--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,21 +14,21 @@
     "test:mv": "mv tests\\e2e\\screenshots mochawesome-report\\assets\\screenshots"
   },
   "dependencies": {
-    "axios": "0.20.0",
-    "buefy": "0.9.3",
-    "core-js": "3.6.5",
-    "mocha": "8.2.1",
-    "mochawesome": "6.2.1",
-    "mochawesome-merge": "4.2.0",
-    "vue": "2.6.12",
-    "vue-router": "3.4.4"
+    "axios": "0.27.2",
+    "buefy": "0.9.21",
+    "core-js": "3.22.7",
+    "mocha": "10.0.0",
+    "mochawesome": "7.1.3",
+    "mochawesome-merge": "4.2.1",
+    "vue": "3.2.36",
+    "vue-router": "4.0.15"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-babel": "5.0.4",
+    "@vue/cli-plugin-e2e-cypress": "5.0.4",
+    "@vue/cli-plugin-router": "5.0.4",
+    "@vue/cli-service": "5.0.4",
+    "vue-template-compiler": "2.6.14"
   },
   "browserslist": [
     "> 1%",
